Closed Bug 1625266 Opened 4 years ago Closed 4 years ago

VoiceOver does not report value, value changes for stepper

Categories

(Core :: Disability Access APIs, defect, P1)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla77
Tracking Status
firefox77 --- verified

People

(Reporter: morgan, Assigned: morgan)

References

(Blocks 1 open bug)

Details

(Whiteboard: [mac2020_1])

Attachments

(1 file)

STR:

  1. Launch FF with VO
  2. Navigate to data:text/html,<label for="example-number">Your favorite number?</label><input type="number" name="example-number" value="11" id="example-number">
  3. Move VO cursor to input box

Expected: VO says: "12, Your favourite number?, incrementable edit text" or similar, reporting the current value
Actual: VO says: "Your favourite number?, stepper" without reporting the current value

  1. Increment/Decrement the stepper
    Expected: VO reports value changes
    Actual: VO reports "Incrementing" or "Decrementing" but not the updated value
Assignee: nobody → mreschenberg
Assignee: mreschenberg → eitan
Priority: P2 → P1
Assignee: eitan → mreschenberg
Blocks: 1627763
Blocks: 1627812
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/53e3c90cddeb
Add stepper subclass, support value changes. r=eeejay
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
Flags: qe-verify+

Confirmed issue with 76.0a1(20200327215207) on macOS 10.15.3.
Verified patch with 77.0b3.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: