Bug 1625266: Add stepper subclass, support value changes. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D70772