accessible/tests/browser/mac/browser_range.js
@@ -48,3 +48,45 @@ addAccessibleTask(
     );
   }
 );
+
+/**
+ * Test input[type=range]
+ */
+addAccessibleTask(
+  `<input type="number" value="11" id="number">`,
+  async (browser, accDoc) => {
+    let number = getNativeInterface(accDoc, "number");
+    is(
+      number.getAttributeValue("AXRole"),
+      "AXIncrementor",
+      "Correct AXIncrementor role"
+    );
+    is(number.getAttributeValue("AXValue"), 11, "Correct initial value");
+
+    let actions = number.actionNames;
+    ok(actions.includes("AXDecrement"), "Has decrement action");
+    ok(actions.includes("AXIncrement"), "Has increment action");
+
+    let evt = waitForMacEvent("AXValueChanged");
+    number.performAction("AXIncrement");
+    await evt;
+    is(number.getAttributeValue("AXValue"), 12, "Correct increment value");
+
+    evt = waitForMacEvent("AXValueChanged");
+    number.performAction("AXDecrement");
+    await evt;
+    is(number.getAttributeValue("AXValue"), 11, "Correct decrement value");
+
+    evt = waitForMacEvent("AXValueChanged");
+    // Adjust value via script in content
+    await SpecialPowers.spawn(browser, [], () => {
+      content.document.getElementById("number").value = 42;
+    });
+    await evt;
+    is(
+      number.getAttributeValue("AXValue"),
+      42,
+      "Correct value from content change"
+    );
+  }
+);
